[package]
name = "rsixel"
version = "0.1.0"
edition = "2021"
authors = ["Denis Strizhkin strdenis02@gmail.com"]
homepage = "https://github.com/denisstrizhkin/rsixel"
repository = "https://github.com/denisstrizhkin/rsixel"
description = "Tool and library for encoding images into sixel format"
keywords = ["lib", "cli", "sixel"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
image = "0.25.8"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
lto = "fat"

[[bench]]
name = "encoder_from_image"
harness = false

[[bench]]
name = "color_hist"
harness = false
