[package]
name = "rsixel"
version = "0.1.0"
edition = "2021"
authors = ["Denis Strizhkin strdenis02@gmail.com"]
homepage = "https://github.com/denisstrizhkin/rsixel"
repository = "https://github.com/denisstrizhkin/rsixel"
description = "Tool and library for encoding images into sixel format"
keywords = ["lib", "cli", "sixel"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
image = "0.25.8"
itertools = "0.14.0"
log = "0.4.28"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
lto = "fat"

[[bench]]
name = "encoder_from_image"
harness = false

[[bench]]
name = "color_hist"
harness = false
